# computegraphlib

./: .gitignore  CMakeLists.txt  README.md
cglib/: CMakeLists.txt
cglib/includes/: CompilationMemoryMap.hpp  CompiledGraph.hpp  GraphCompilationPlatform.hpp  GraphCompilationPlatformFactory.hpp  GraphCompiler.hpp  ImplementationStrategyFactory.hpp  Kernel.hpp  types.hpp
cglib/includes/nodes/: ConstMultNode.hpp  ExpFuncNode.hpp  InputNode.hpp  LogFuncNode.hpp  MatrixMultNode.hpp  NegateNode.hpp  Node.hpp  ReduceMeanNode.hpp  ReduceSumNode.hpp  SliceNode.hpp  StackNode.hpp  TransposeNode.hpp  VariableNode.hpp  VectorAddNode.hpp  VectorDivNode.hpp  VectorMultNode.hpp  nodes.hpp
cglib/src/: CompilationMemoryMap.cpp  CompiledGraph.cpp  GraphCompilationPlatform.cpp  GraphCompiler.cpp
cglib/src-cpu/: GraphCompilationCPUPlatform.cpp  GraphCompilationCPUPlatform.hpp  GraphCompilationCPUPlatformNodeCompiler.cpp  ImplementationStrategyFactoryCPU.cpp
cglib/src-cpu/kernels/: ConstMultNodeCPUKernel.hpp  CopyDataCPUKernel.cpp  CopyDataCPUKernel.hpp  NegateNodeCPUKernel.hpp  ReduceMeanNodeCPUKernel.hpp  ReduceSumNodeCPUKernel.cpp  VectorDivNodeCPUKernel.hpp  VectorMultNodeCPUKernel.hpp  kernels.hpp
cglib/src-gpu/: GraphCompilationGPUPlatform.cpp  GraphCompilationGPUPlatform.hpp  GraphCompilationGPUPlatformNodeCompiler.cpp  ImplementationStrategyFactoryGPU.cpp  OCLWrappers.cpp  OCLWrappers.hpp
cglib/src-gpu/kernels/: ConstMultNodeGPUKernel.cpp  ConstMultNodeGPUKernel.hpp  CopyDataGPUKernel.cpp  CopyDataGPUKernel.hpp  EmptyGPUKernel.cpp  EmptyGPUKernel.hpp  ExpFuncNodeGPUKernel.cpp  ExpFuncNodeGPUKernel.hpp  GPUKernel.cpp  GPUKernel.hpp  LogFuncNodeGPUKernel.cpp  LogFuncNodeGPUKernel.hpp  MatrixMultNodeGPUKernel.cpp  MatrixMultNodeGPUKernel.hpp  NegateNodeGPUKernel.cpp  NegateNodeGPUKernel.hpp  OpenCLCompiler.hpp  ReduceMeanNodeGPUKernel.cpp  ReduceMeanNodeGPUKernel.hpp  ReduceSumNodeGPUKernel.cpp  ReduceSumNodeGPUKernel.hpp  VectorAddNodeGPUKernel.cpp  VectorAddNodeGPUKernel.hpp  VectorDivNodeGPUKernel.cpp  VectorDivNodeGPUKernel.hpp  VectorMultNodeGPUKernel.cpp  VectorMultNodeGPUKernel.hpp  WaitForGPUKernel.cpp  WaitForGPUKernel.hpp  kernels.hpp
cglib/src/nodes/: ConstMultNode.cpp  ExpFuncNode.cpp  InputNode.cpp  LogFuncNode.cpp  MatrixMultNode.cpp  NegateNode.cpp  Node.cpp  ReduceMeanNode.cpp  ReduceSumNode.cpp  SliceNode.cpp  StackNode.cpp  TransposeNode.cpp  VariableNode.cpp  VectorAddNode.cpp  VectorDivNode.cpp  VectorMultNode.cpp
cmake/: FindPAPI.cmake
includes/: CompilationMemoryMap.hpp  CompiledGraph.hpp  GraphCompilationContext.hpp  GraphCompilationPlatform.hpp  GraphCompiler.hpp  ImplementationStrategyFactory.hpp  Kernel.hpp  NodeCompiler.hpp  types.hpp
includes/nodes/: ConstMultNode.hpp  InputNode.hpp  MatrixMultNode.hpp  Node.hpp  ReduceMeanNode.hpp  ReduceSumNode.hpp  SliceNode.hpp  StackNode.hpp  VariableNode.hpp  VectorAddNode.hpp  VectorMultNode.hpp
src/: CompilationMemoryMap.cpp  CompiledGraph.cpp  GraphCompilationContext.cpp  GraphCompiler.cpp  main.cpp
src-cpu/: GraphCompilationCPUPlatform.cpp  GraphCompilationCPUPlatform.hpp  GraphCompilationCPUPlatformNodeCompiler.cpp  GraphCompilationCPUStrategy.cpp  GraphCompilationCPUStrategy.hpp  GraphCompliationContextCPU.cpp  ImplementationStrategyFactoryCPU.cpp  NodeCompilerCPU.cpp  NodeCompilerCPU.hpp
src-cpu/kernels/: ConstMultNodeCPUKernel.cpp  CopyDataCPUKernel.cpp  ExpFuncNodeCPUKernel.cpp  ExpFuncNodeCPUKernel.hpp  LogFuncNodeCPUKernel.cpp  LogFuncNodeCPUKernel.hpp  MatrixMultNodeCPUKernel.cpp  MatrixMultNodeCPUKernel.hpp  NegateNodeCPUKernel.cpp  ReduceMeanNodeCPUKernel.cpp  ReduceMeanNodeCPUKernel.hpp  ReduceSumNodeCPUKernel.cpp  ReduceSumNodeCPUKernel.hpp  VectorAddNodeCPUKernel.cpp  VectorAddNodeCPUKernel.hpp  VectorDivNodeCPUKernel.cpp  VectorDivNodeCPUKernel.hpp  VectorMultNodeCPUKernel.cpp  VectorMultNodeCPUKernel.hpp  kernels.hpp
src-cpu/nodes/: InputNodeCPU.cpp  MatrixMultNodeCPU.cpp  VariableNodeCPU.cpp  VectorAddNodeCPU.cpp
src-gpu/: GraphCompilationContextGPU.cpp  GraphCompilationGPUPlatform.cpp  GraphCompilationGPUPlatform.hpp  GraphCompilationGPUPlatformNodeCompiler.cpp  GraphCompilationGPUStrategy.cpp  GraphCompilationGPUStrategy.hpp  ImplementationStrategyFactoryGPU.cpp  NodeCompilerGPU.cpp  NodeCompilerGPU.hpp  OCLWrappers.cpp  OCLWrappers.hpp
src-gpu/kernels/: ConstMultNodeGPUKernel.cpp  ConstMultNodeGPUKernel.hpp  CopyDataGPUKernel.cpp  CopyDataGPUKernel.hpp  ExpFuncNodeGPUKernel.cpp  ExpFuncNodeGPUKernel.hpp  LogFuncNodeGPUKernel.cpp  LogFuncNodeGPUKernel.hpp  MatrixMultNodeGPUKernel.cpp  MatrixMultNodeGPUKernel.hpp  NegateNodeGPUKernel.cpp  NegateNodeGPUKernel.hpp  ReduceMeanNodeGPUKernel.cpp  ReduceMeanNodeGPUKernel.hpp  ReduceSumNodeGPUKernel.cpp  ReduceSumNodeGPUKernel.hpp  VectorAddNodeGPUKernel.cpp  VectorAddNodeGPUKernel.hpp  VectorDivNodeGPUKernel.cpp  VectorDivNodeGPUKernel.hpp  VectorMultNodeGPUKernel.cpp  VectorMultNodeGPUKernel.hpp  kernels.hpp
src-gpu/nodes/: InputNodeGPU.cpp  MatrixMultNodeGPU.cpp  VariableNodeGPU.cpp  VectorAddNodeGPU.cpp
src-opencl-kernels/: VectorAddKernel.cpp
src/nodes/: ConstMultNode.cpp  InputNode.cpp  InputNode.hpp  InputNodeCPU.cpp  LogFuncNode.cpp  MatrixMultNode.cpp  Node.cpp  Node.hpp  ReduceMeanNode.cpp  (+9 more)
tests/: 0s01-VectorAddNodeSingle.cpp  0s02-InputNodeSingle.cpp  0s03-MatrixMultNodeSingle.cpp  0sc01-VectorAddNodeSingle.cpp  0sc02-InputNodeSingle.cpp  0sc03-MatrixMultNodeSingle.cpp  0sc04-VectorDivNodeSingle.cpp  0sc05-VectorMultNodeSingle.cpp  0sc06-ReduceMeanNodeSingle.cpp  0sc07-SliceNodeSingle.cpp  0sc08-StackNodeSingle.cpp  0sc09-TransposeNodeSingle.cpp  0sc10-ExpFuncNodeSingle.cpp  0sp01-VectorAddNodeSingle.cpp  0sp03-MatrixMultNodeSingle.cpp  0sp06-ReduceMeanNodeSingle.cpp  0sp08-StackNodeSingle.cpp  0sp10-ExpFuncNodeSingle.cpp  1gc01-Graph.cpp  1gc01-MNISTGraph.cpp  1gc02-Graph.cpp  1gp01-Graph.cpp  1gp02-MNISTGraphForwardOnly.cpp  1gp02b-MNISTGraphForwardOnlyBaseline.cpp  1gp02bg-MNISTGraphForwardOnlyGPUBaseline.cpp  1gp03-MNISTGraph.cpp  1gp03b-MNISTGraphBaseline.cpp  CMakeLists.txt  main.cpp  test_script.py
